# RandTourPers

./: CMakeLists.txt  main.cpp
configs/: config.json
qml/: main.qml
src/: CMakeLists.txt  persback.cpp  persback.h  persdata.cpp  persdata.h  persmodel.cpp  persmodel.h  saveloadconf.cpp  saveloadconf.h
